<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="textClear">AC</string>
    <string name="textPlusMinus">+/-</string>
    <string name="textDivide">÷</string>
    <string name="textPercent">%</string>
    <string name="textSeven">7</string>
    <string name="textEight">8</string>
    <string name="textNine">9</string>
    <string name="textMultiply">X</string>
    <string name="textFour">4</string>
    <string name="textFive">5</string>
    <string name="textSix">6</string>
    <string name="textMinus">-</string>
    <string name="textOne">1</string>
    <string name="textTwo">2</string>
    <string name="textThree">3</string>
    <string name="textPlus">+</string>
    <string name="textZero">0</string>
    <string name="textDecimal">.</string>
    <string name="textEquals">=</string>
</resources>